<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/home_edit_outline"
            android:title="@string/menu_trangchu" />
        <item
            android:id="@+id/nav_tailieu"
            android:icon="@drawable/account_outline"
            android:title="@string/menu_tailieu" />
        <item
            android:id="@+id/nav_danhsach"
            android:icon="@drawable/list_box_outline"
            android:title="@string/menu_danhsach" />
        <item
            android:id="@+id/nav_chiase"
            android:icon="@drawable/export_variant"
            android:title="@string/menu_chiase" />
        <item
            android:id="@+id/nav_dang"
            android:icon="@drawable/cash_multiple"
            android:title="@string/menu_dang" />
    </group>
</menu>